feat: :sparkles: bypassを使わないで実装
